update background stars, fix flicker moon animatino

--- a/src/css/gameview.css
+++ b/src/css/gameview.css
@@ -21,6 +21,15 @@
 	pointer-events: none;
 }
 
+.layer-1 {
+	position: absolute;
+	width: 1920px;
+	height: 1280px;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 
 .menu-icon {
 	margin-top: 10px;
@@ -34,23 +43,22 @@
 }
 
 .moon-orbit {
-	position: absolute;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	width: 900px;
 	height: 900px;
-	left: 120px;
-	top: 20px;
 
 	-webkit-animation: spin 45s linear infinite;
 	-moz-animation: spin 45s linear infinite;
 	-animation: spin 45s linear infinite;
-	
+
+	-webkit-backface-visibility: hidden;
 }
 
 .moon {
-	width: 650px;
+	-webkit-transform: translate3d(0, 0, 0);
+	width: 600px;
 }
 
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
@@ -58,6 +66,7 @@
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); }}
 
 .object1 {
+	-webkit-transform: translate3d(0, 0, 0);
 	position: absolute;
 	left: 800px;
 	width: 120px;
@@ -72,15 +81,15 @@
 .object2 {
 	position: absolute;
 	width: 40px;
-	top: 400px;
-	left: 1200px;
+	top: 100px;
+	left: 100px;
 }
 
 .object3 {
 	position: absolute;
 	width: 100px;
-	top: 800px;
-	left: 1200px;
+	top: 300px;
+	left: 300px;
 }
 
 .interact {
